--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="/node_modules/restangular/src/restangular.js"></script>
         <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
+		<script src="/node_modules/lightbox2/dist/js/lightbox.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
@@ -87,6 +88,7 @@
 		<link rel="stylesheet" href="/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" />
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog.min.css" />
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog-theme-default.min.css" />
+        <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
@@ -96,12 +98,12 @@
 
 
 	</head>
-	
-	
+
+
 	<body ng-app="myApp" ng-controller="MainController">
 		<!-- Loader -->
 		<div class="loadPage">
-			<div class="loader-circle"></div>		
+			<div class="loader-circle"></div>
 		</div>
 		<header>
 			<div class="header-top">
@@ -137,4 +139,5 @@
 			</div>
 		</footer>
 	</body>
+
 </html>
