--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -9,7 +9,7 @@
     </div>
     <div class="auction-label col-xs-6">{{'texts.user.is_on_vac' | i18next}}</div>
     <div class="auction-cell col-xs-6 col-sm-2 col-md-2 col-lg-2">
-        <div class="my-button normal-button assign-button" ng-click="assignDriver(driver.ID)">
+        <div class="my-button normal-button assign-button" ng-click="assignDriver(driver.ID, $event)">
             {{'texts.user.assign_button' | i18next}}
         </div>
     </div>
